fix: fix text alignment

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1981,8 +1981,8 @@ margin-bottom: 0;
   //   max-width: 720px;
   // }
   .h1home h1 {
-    font-size: 40px;
-    line-height: 55px;
+    font-size: 62px;
+    line-height: 80px;
   }
   .menu-toggle {
     display: none;
